# redis-connector

./: .gitignore  Cargo.toml  docker-compose.yml
crates/consumer/: Cargo.toml
crates/consumer/src/: config.rs  lib.rs  opensearch.rs  worker.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: lib.rs  redis_producer.rs  wal.rs
doc/: TESTING.md  event-spec.md  plan.md
src/: handler.rs  main.rs
