[package]
name = "cdc-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
cdc-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
