[package]
name = "cdc-producer"
version = "0.1.0"
edition = "2024"

[dependencies]
cdc-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
pgwire-replication = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.12.1"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
